themes/dijit.css
/* ... */
.dijitComboBox .dijitArrowButtonInner {
	display: block;
}

/* In high contrast mode, display the check symbol */
.dijit_a11y .dijitToggleButtonChecked .dijitToggleButtonIconChar {
	display: inline !important;
}


/****
		3-element borders:  ( dijitLeft + dijitStretch + dijitRight )
 ****/
	
.dijitLeft {
	/* Left part of a 3-element border */
	background-position:left top;
	background-repeat:no-repeat;
}

.dijitStretch {
	/* Middle (stretchy) part of a 3-element border */
	white-space:nowrap;			/* MOW: move somewhere else */
	background-repeat:repeat-x;
}

.dijitRight {
	/* Right part of a 3-element border */
	#display:inline;				/* IE7 sizes to outer size w/o this */
	background-position:right top;
	background-repeat:no-repeat;
}

.dijitButton,
.dijitDropDownButton,
.dijitComboButton {
	/* outside of button */
	margin: 0.2em;
}

.dj_safari .dijitToolbar .dijitDropDownButton {
	padding-left: 0.3em;
}

.dijitButtonNode {
	/* Node that is acting as a button -- may or may not be a BUTTON element */
	border:1px solid gray;
	margin:0;
	padding:.2em .2em .1em;
	line-height:normal;
	cursor:pointer;
	vertical-align:middle;	
	text-align:center;
	white-space: nowrap;
}

.dijitArrowButton {
	/* Node that is acting as a arrow button -- drop down (spinner has its own treatment).  Also gets dijitButtonNode */
	/* place AFTER dijitButtonNode so it overrides */
	padding: 0 .4em;
}
DIV.dijitArrowButton {
	float: right;
}

.dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	border-style: solid;
	border-width: 0 0 0 1px !important;
	padding: 0;
	position: absolute;
	right: 0;
	float: none;
}
.dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	position: absolute;
	height: 50%;
}
.dj_ie .dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	height: expression(this.parentNode.offsetHeight/2);
}
.dijitSpinner .dijitInputLayoutContainer .dijitDownArrowButton {
	top: none;
	bottom: 0;
	border-top-width: 1px !important;
}
.dijitSpinner .dijitInputLayoutContainer .dijitUpArrowButton {
	top: 0;
	bottom: none;
}

.dijitComboButton TABLE {
	/* each cell in a combo-table should have its own separate border */
	border-collapse: separate;
	border:0;
	padding:0;
	margin:0;
}

.dijitComboButton .dijitButtonContents {
	border-right-width:0 !important;
}


.dj_ie BUTTON.dijitButtonNode {
	overflow: visible; /* eliminates arbitrary left and right padding on buttons */
}

table .dijitButton .dijitButtonNode,
table .dijitComboButton .dijitButtonNode {
	#overflow:hidden; /* visible messes up if the button is inside a table on IE */
}



.dijitButtonNode IMG {
	/* make text and images line up cleanly */
	vertical-align:middle;
	margin-bottom:.2em;
}

/******
	TextBox related.
	Everything that has an <input>
*******/

.dijitTextBox,
.dijitComboBox,
.dijitSpinner {
	border: solid black 1px;
	width: 15em;	/* need to set default size on outer node since inner nodes say <input style="width:100%"> and <td width=100%>.  user can override */
}

/* rules for safari to deal with fuzzy blue focus border */
.dijitTextBox input:focus,
.dijitComboBox input:focus,
.dijitSpinner input:focus {
	outline: none;	/* blue fuzzy line looks wrong on combobox or something w/validation icon showing */
}
.dijitTextBoxFocused,
.dijitComboBoxFocused,
.dijitSpinnerFocused {
	/* should we display focus like we do on other browsers, or use the safari standard focus indicator?? */
	outline: auto 5px -webkit-focus-ring-color;
}

.dijitTextBox INPUT,
.dijitComboBox INPUT,
.dijitSpinner INPUT {
	padding:0;
	border-left: solid black 1px;	/* TODO: for RTL mode should be border-right */
	display:inline;
	position:static !important;
	border:0 !important;	
	margin:0 !important;
	vertical-align:0em !important;
	visibility:visible !important;
	background-color:transparent !important;
	background-image:none !important;
	width:100% !important;
}

/* Display an "X" for invalid input. Themes will override these rules to display an icon instead.
*/
.dijitValidationIcon {
	visibility: hidden;
	display: block;
	padding: 0 2px;
	float: right;
	height: auto;
}
.dijitValidationIconText {
	visibility: hidden;
	display: none;
	float:right;
	font-family: sans-serif;
	font-style:italic;
	font-size: 0.45em;
	line-height: 190%;
}
.dijit_a11y .dijitValidationIcon { display: none !important; }
.dijit_a11y .dijitValidationIconText { display: block !important; }

.dijitError .dijitValidationIcon,
.dijitError .dijitValidationIconText {
	visibility: visible;
}

.dijitTextBox .dijitArrowButton {
	/* this is for a combo box with no arrow displayed; we set baseClass=TextBox */
	display:none;
}

/****
		dijit.form.CheckBox
 	 &
  		dijit.form.RadioButton
 ****/

.dijitCheckBox,
.dijitRadio,
.dijitCheckBoxInput {
	padding: 0;
	border: 0;
	width: 16px;
	height: 16px;
	background-position:center center;
	background-repeat:no-repeat;
	overflow: hidden;
}

.dijitCheckBox INPUT,
.dijitRadio INPUT {
	margin: 0;
	padding: 0;
	display: block;
}

.dijitCheckBoxInput {
	/* place the actual input on top, but all-but-invisible */
	opacity: 0.01;
}

.dj_ie .dijitCheckBoxInput {
	filter: alpha(opacity=0);
}

.dijit_a11y .dijitCheckBox,
.dijit_a11y .dijitRadio {
	width: auto;
	height: auto;
}
.dijit_a11y .dijitCheckBoxInput {
	opacity: 1;
	filter: none;
	width: auto;
	height: auto;
}


/****
		dijit.ProgressBar
 ****/

.dijitProgressBarEmpty{
	/* outer container and background of the bar that's not finished yet*/
	position:relative;overflow:hidden;
	border:1px solid black; 	/* a11y: border necessary for high-contrast mode */
	z-index:0;			/* establish a stacking context for this progress bar */
}

.dijitProgressBarFull {
	/* outer container for background of bar that is finished */
	position:absolute;
	overflow:hidden;
	z-index:-1;
	top:0;
	width:100%;
	height:100%;
}
/* ... */

